--- a/style.css
+++ b/style.css
@@ -568,3 +568,27 @@ header .navbar ul li a:hover {
       padding: 2rem;
     }
   }
+  .dark-mode {
+    background-color: #333333; /* Dark background color */
+    color: #ffffff; /* Light text color */
+    padding: 10px;
+    align-items: center;
+  }
+  
+  #darkModeToggle {
+    position: fixed;
+    top: 17px;
+    right: 15px;
+    padding: 5px 10px;
+    cursor: pointer;
+    background-color: #333; /* Light background color */
+    color: #fff; /* Dark text color */
+    border: none;
+    outline: none;
+    transition: background-color 0.3s ease;
+    padding:10px;
+    border-radius: 5px;
+  }
+  #darkModeToggle:hover{
+    background-color: #555;
+  }
